--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
@@ -8,5 +8,6 @@
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Settings" />
+        android:text="Settings"
+        android:gravity="center"/>
 </LinearLayout>
