--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
@@ -11,21 +11,29 @@
         android:text="Current Session"
         android:gravity="center"/>
 
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:gravity="center"/>
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start tracking" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/pauseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pause" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save" />
+
 </LinearLayout>
