Add basic stat tracking and db
stopwatch functionality, save to db

--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
@@ -11,17 +11,24 @@
         android:text="Current Session"
         android:gravity="center"/>
 
+    <EditText
+        android:id="@+id/currentSessionNameEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
     <TextView
         android:id="@+id/timeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="0:0:0"
         android:gravity="center"/>
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="startTracking"
         android:text="Start tracking" />
 
     <Button
@@ -35,5 +42,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save" />
+
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset" />
 
 </LinearLayout>
