--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/user_dashboard.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/user_dashboard.xml
@@ -17,12 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome " />
+
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/welcomeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_weight="2"/>
+            android:layout_weight="2" />
 
         <Button
             android:id="@+id/trackButton"
