--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/all_records.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/all_records.xml
@@ -35,5 +35,34 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_weight="2"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="gotoSettings"
+            android:text="Settings" />
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="gotoHome"
+            android:text="Home" />
+        <Button
+            android:id="@+id/trackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="gotoTracking"
+            android:text="Track" />
+
+    </LinearLayout>
+
 </LinearLayout>
