--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
@@ -13,111 +13,145 @@
         android:gravity="center"
         android:layout_marginBottom="10dp"/>
 
-    <TextView
-        android:id="@+id/textView12"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Time taken"
-        android:gravity="center"/>
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="(hrs:mins:secs)"
-        android:textSize="12sp"
-        android:gravity="center"/>
+        android:orientation="vertical"
+        android:layout_weight="2">
 
-    <TextView
-        android:id="@+id/recordedTimeText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="0:0:0"
-        android:textSize="20sp"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Time taken"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="(hrs:mins:secs)"
+            android:textSize="12sp"
+            android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/recordedTimeText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0:0:0"
+            android:textSize="20sp"
+            android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/recordedCategoryText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Text"
-        android:textSize="16sp"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stats:"
-        android:textSize="16sp"
-        android:padding="5dp"/>
+        <TextView
+            android:id="@+id/recordedCategoryText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Text"
+            android:textSize="16sp"
+            android:gravity="center"/>
 
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stats:"
+            android:textSize="16sp"
+            android:padding="5dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Steps taken"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/recordedStepsText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textSize="20sp"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Distance travelled"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/recordedDistanceText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textSize="20sp"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete record"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/settingsButton"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Steps taken"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/recordedStepsText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="20sp"
-                android:gravity="center"/>
-
-        </LinearLayout>
-
-        <LinearLayout
+            android:layout_height="wrap_content"
+            android:onClick="gotoSettings"
+            android:text="Settings" />
+        <Button
+            android:id="@+id/homeButton"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:onClick="gotoHome"
+            android:text="Home" />
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Distance travelled"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/recordedDistanceText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="20sp"
-                android:gravity="center"/>
-
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/allRecButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="gotoRecords"
+            android:text="All records" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete record"
-        android:layout_gravity="center" />
 
 
 </LinearLayout>
