camera shared pref

--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/activity_camera.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/activity_camera.xml
@@ -8,27 +8,25 @@
     android:orientation="vertical"
     >
 
-    <view
+    <!--<view
         android:id="@+id/previewView"
         class="androidx.camera.view.PreviewView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1" />
+        -->
 
-    <Button
-        android:id="@+id/buttonCaptureSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Capture and Save" />
+
 
     <Button
         android:id="@+id/buttonCaptureShow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Capture and Show" />
+        android:layout_height="68dp"
+        android:layout_gravity="center|center_horizontal"
+        android:text="Open Camera" />
+
+
 
     <ImageView
         android:id="@+id/imageViewCapturedImg"
