--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/user_dashboard.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/user_dashboard.xml
@@ -43,17 +43,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Placeholder" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Placeholder" />
+            <ImageView
+                android:id="@+id/imageViewCapturedImg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/ic_menu_camera" />
         </LinearLayout>
     </ScrollView>
 
